Fixed manager to build with right versions from zilla.json